 * Crash with empty dataset and boxplot widget
 * Fix copy and paste of datasets
 * Python 3 resizing axis bug
 * Crash if picking/zooming on document with no pages
 * Crash if reediting histogram dataset with blank output entry
 * Use end of text formatting string beyond format specifier
 * When writing SVG text as text, use xml:space="preserve" to
   avoid missing whitespace

Changes in 1.20.1:
 * Include free-desktop appdata, MIME and desktop files
 * When plotting xy widget filled error regions, plot line on top

Bug fixes:
 * Fix embedding interface startup problem in 1.20
 * Additional embedding interface fixes for Python 3
 * Fix crash in tutorial if flashing widget deleted
 * Fix polar plot crash with reverse minumum and maximum radii
 * Fix crash when changing range of broken axes interactively
 * Fix object deletion crash in setting menu
 * Check output dataset is not same as an input for histograms
 * Fix for compilation on Qt 4.6
 * Catch socket errors on embed client
 * Fixes for formatting strings, including fixes for arguments of
   the extended %Vg format and properly supporting %%
 * When restoring window position, do not restore offscreen

Changes in 1.20:
 * Add HDF5 file data import
 * Allow expressions to be edited for linked 2D datasets
 * Add support for 2D datasets with irregular gridpoints
 * Add 2D data CSV import
 * Allow safe renaming of linked datasets
 * Support importing text from FITS files

Bug fixes:
 * When capturing data from a file/named pipe, do not stop when no
   more data are available
 * Fixes mangling of text in saved files using Windows binary
 * Fix encoding for standard file import
 * Fix FITS import for python3

Changes in 1.19.1:
 * Add option to disable scaling of marker border with point scaling
 * Implement label at-minimum/at-maximum for ternary plot
 * Add border and background fill settings for text label widget
 * Enable FITS support with astropy

Bug fixes:
 * Fix broken drag and drop in documents